# cmake-integration-demo

./: .gitignore  .gitmodules  README.md  generate-eclipse-project.sh
appserver/: CMakeLists.txt  Dockerfile  clean.sh  run.sh
appserver/src/: CMakeLists.txt  main.cpp
appserver/src/configuration/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationConstants.h  Properties.cpp  Properties.h
appserver/src/logging/: CMakeLists.txt  Logger.cpp  Logger.h
eclipse-project/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake
eclipse-project/src/: Makefile  cmake_install.cmake
eclipse-project/src/configuration/: Makefile  cmake_install.cmake
